通过event_bus来实现最多一个输入框处于编辑状态

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
     sdk: flutter
   provider: ^5.0.0
   sprintf: ^7.0.0
+  event_bus: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
