--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   uuid: ^3.0.4
+  sqflite: ^2.0.0+3
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
