--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,14 @@ dependencies:
   sqflite: ^2.0.0+3
   path: ^1.8.2
   sprintf: ^7.0.0
+  yaml: ^3.1.0
+  event_bus: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   provider: ^5.0.0
-  sprintf: ^7.0.0
-  event_bus: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
